test/types/file/freadNoInt.chpl
var myInt: int;
var f = open("freadNoInt.txt", mode.r).reader();

f.read(myInt);
